--- a/ansible-lint.yml
+++ b/ansible-lint.yml
@@ -1,3 +1,9 @@
+exclude_paths:
+  - ../.cache/
+  - .cache/
+  # Must not be relatively anchored
+  - /**/molecule/*/*.yml
+
 skip_list:
   - "204"
   - yaml
