--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,11 +10,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-          depth: 0
       - name: Set up Python
         uses: actions/setup-python@v2
       - name: Update git
-        run: git submodule update --remote --recursive
+        run: git submodule foreach --recursive git pull
       - name: Do install path
         uses: ./tests/.github/actions/install_path/
         id: path
