Set options before pulling

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
       - name: Update git
-        run: git submodule foreach --recursive git pull
+        run: |
+          git config pull.rebase true
+          git submodule foreach --recursive git pull
       - name: Do install path
         uses: ./tests/.github/actions/install_path/
         id: path
