--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
       - name: Do install path
-        uses: ./tests/.github/actions/install_path/
+        uses: ./.github/actions/install_path/
         id: path
       - name: Install dependencies
         run: python -m pip install --upgrade tox
