--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,10 +10,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: 'recursive'
+      - uses: actions/checkout@v3
+        with:
+          repository: devroles/meta_test
+          path: ${{ env.HOME }}/myself
       - name: Set up Python
         uses: actions/setup-python@v2
       - name: Do install path
-        uses: ./.github/actions/install_path/
+        uses: ${{ env.HOME }}/myself/.github/actions/install_path/
         id: path
       - name: Install dependencies
         run: python -m pip install --upgrade tox
