--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: devroles/meta_test
-          path: ~/myself
+          path: .meta_test
       - name: Set up Python
         uses: actions/setup-python@v2
       - name: Do install path
-        uses: ~/myself/.github/actions/install_path/
+        uses: ./.meta_test/.github/actions/install_path/
         id: path
       - name: Install dependencies
         run: python -m pip install --upgrade tox
