--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,8 @@ jobs:
           import json
           ubuntu = json.loads('${{ steps.collection.outputs.tox-envs }}')
           macos  = json.loads('${{ steps.vagrant.outputs.tox-envs }}')
-          ub_zip = [{'os': 'ubuntu-latest', 'scenario': u} for u in ubuntu]
-          mac_zip = [{'os': 'macos-10.15', 'scenario': m} for m in macos]
+          ub_zip = [{'os': 'ubuntu-22.04', 'scenario': u} for u in ubuntu]
+          mac_zip = [{'os': 'macos-12', 'scenario': m} for m in macos]
           print("::set-output name=scenarios::" + json.dumps(ub_zip + mac_zip))
 
   lint:
