--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,10 @@ jobs:
         with:
           submodules: 'recursive'
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: pip
       - name: Install dependencies
         run: |
           set -ex
@@ -61,9 +62,10 @@ jobs:
         with:
           submodules: 'recursive'
       - name: Install Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: pip
       - name: Find scenario name
         id: scenario-name
         env:
