Run proper path

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           cache: pip
       - name: Do install path
-        uses: ./.meta_test/.github/actions/install_path/
+        uses: ./tests/.github/actions/install_path/
         id: path
       - name: Install dependencies
         run: python -m pip install --upgrade tox
